   const s
-- updated style guide - please read and follow or comment on it!
-- silenced bogus -O2 warnings
-- updated ChangeLog terms; added env vars
-- latest from Tom
-- minor doc updates
-- converted fast pattern errors to warnings
-- add check for null gadget in binder
-- remove cruft from fast pattern config
-- updates from tom and josh

124
-- valgrind cleanup
-- fixed incorrect casting of ftp, ftp-data, and telnet flow data
-- fixed reload_config()
-- tweak error for x = { 1 } where x is a table not a list
-- some make distcheck fixes (still broken)
-- changed version to 2.10.0 and build to 123
-- removed --enable-sourcefire and reformatted configure --help
-- removed obsolete etc/ and its unicode.map and attribute_table.dtd
-- josh's changes for snort2lua config binding by file
-- fixed stream_icmp flow key init
-- added --warn-flowbits
-- tweaked flowbits counts start up output
-- updates to snort.lua and snort_defaults.lua
-- fixed stream_icmp counts
-- added markup for signal help and put in doc
-- change snort.lua normalize to normalizer
-- change parse time LogMessage("WARNING...") to ParseWarning()
-- changed --enable-perfprofiling to --enable-perf-profiling
-- changed --enable-profile to --enable-gprof-profiling
-- added --warn-unknown to warn about unknown symbols
-- added SNORT_IGNORE env var to ignore unkonwn symbols
-- commented out ppm, profile, and normalizer in snort.lua since these
   require special conditions to be enabled
-- added --dump-defaults to get Lua formatted defaults
-- split doc for modules into separate sections by type
-- reworked manual again to include terms and lists of modules and plugins
-- added non-Lua error message
-- updated .gitignore and sorted it
-- fixed --help, etc.
-- added doc sections for snort2lua, new http, binder, and wizard

123
-- refactored documentation
-- changed max_ip6_options to max_ip6_extensions to avoid confusion
-- disabled markup sanitizer() for correct asciidoc results